Fixing the margin in the board of the technologies on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -4125,6 +4125,10 @@ img {
     width: 25px;
     height: 25px;
   }
+
+  .technologies-board__list {
+    margin-left: 0px;
+  }
 }
 
 @media (max-width: 680px) {
